Add linting for .gitlab-ci.yml

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,5 +22,11 @@ repos:
         "--exclude=molecule",
         "--exclude=roles",
         "--exclude=.travis.yml",
-        "--exclude=.github"
+        "--exclude=.gitlab-ci.yml",
+        "."
       ]
+
+- repo: https://gitlab.com/devopshq/gitlab-ci-linter
+  rev: v1.0.1
+  hooks:
+    - id: gitlab-ci-linter
